Setting up general layout, fixed grammer here and there

--- a/src/content/docs/drs/guides/avowed.mdx
+++ b/src/content/docs/drs/guides/avowed.mdx
@@ -16,16 +16,41 @@ import Footer from "@components/Footer.astro";
 <script type="module" src="https://cdn.jsdelivr.net/npm/@shoelace-style/shoelace@2.15.1/cdn/shoelace-autoloader.js"></script>
 
 <Image
-    src="/drs/guides/ta.png"
+    src="/drs/guides/avowed/ta.png"
     width="700"
     height="500"
     decoding="async"
     loading="eager"
     alt="Avowed Cheatsheet"
-    onclick="window.open('/drs/guides/ta.png','_blank')"
+    onclick="window.open('/drs/guides/avowed/ta.png','_blank')"
     style="cursor:pointer; display: block !important; margin-left: auto; margin-right: auto;"
 />
 <p style="text-align:center; margin-top: 0;">(Click to expand in new window)</p>
+:::danger[Please Read Everything!]
+Please read the entire page to fully understand the mechanics and strategies for this encounter.
+:::
+
+## Guide
+### Buster, Raidwide, and Arsenal
+3 tank enumeration Buster
+
+Glory of Bozja needs Aethershield
+
+Cut = Sword = Get in **front**.
+Dealt = Satff = **Away** from boss when she stops spinning
+Mercy = Bow = Get **Behind**. She will *always* re-center herself.
+
+### Bow Phase
+#### Normal
+#### Brands
+
+### Sword Phase
+#### Normal
+#### Brands
+
+### Staff Phase
+#### Normal
+#### Brands
 
 ### Markers
 **Fight Markers**
