--- a/src/content/docs/drs/guides/dahu.mdx
+++ b/src/content/docs/drs/guides/dahu.mdx
@@ -15,6 +15,12 @@ import Footer from "@components/Footer.astro";
 />
 <script type="module" src="https://cdn.jsdelivr.net/npm/@shoelace-style/shoelace@2.15.1/cdn/shoelace-autoloader.js"></script>
 
+## Guide
+### Charges
+### Adds 1
+### Adds 2
+### Adds 3 (The Kitchen Sink)
+
 ### Markers
 **Fight Markers**
 ```
