--- a/src/content/docs/drs/guides/golems.mdx
+++ b/src/content/docs/drs/guides/golems.mdx
@@ -35,8 +35,8 @@ If you prefer a video please watch the <a href="https://www.youtube.com/watch?v=
     style="cursor:pointer; display: block !important; margin-left: auto; margin-right: auto;"
 />
 <p style="text-align:center; margin-top: 0;">(Click to expand in new window)</p>
-:::danger[Consider the Following...]
-Please read the entire page to fully understand and grasp the mechanics you will see during this fight.
+:::danger[Please Read Everything!]
+Please read the entire page to fully understand the mechanics and strategies for this encounter.
 :::
 <br/><hr/>
 
@@ -45,12 +45,16 @@ The goal of Golems is to take the four Bicolor Golems and kill them on the four 
 assigned to handle the golems and hold them in their assigned rooms, allowing them to change colors if needed. Healers will be assigned to each tank to ensure they do not die and potentially be esuna'd if required. Anyone else 
 will act as a hunt train of sorts and kill each of the four golems in order. Commonly the kill order for Bicolor Golems is: **Blue > White > Green > Red**.
 
-In Short...
-<JobIcon icon="TankRole"/>**Golem Tanks** bring their assigned golem to its room and use Interject on the Metamorphosis if needed. <JobIcon icon="HealerRole"/>**Golem Healers** will keep their tank alive with their basic heals, and use Esuna to remove a deadly bleed on the two **Blue Golem Tanks**.
+<JobIcon icon="TankRole"/>**4 Tanks** bring their assigned golem to its room and use Interject on the Metamorphosis if needed.
+
+<JobIcon icon="HealerRole"/>**Healers** will keep their tank alive with their basic heals, and use Esuna to remove a deadly bleed on the two **Blue Golem Tanks**.
+
+<JobIcon icon="DPSRole"/>**1-2 DPS** should handle the 2 uncolored Ruin Golems that spawn in the hallway. Simply keeping them out of the green room while killing them.
+
 **Everyone not assigned a role** will go room to room, killing golems in the order: Blue > White > Green > Red.
 
 
-#### Golem Positions Reference
+#### Golem Map
 <Image
     src="/drs/guides/golemsmap.png"
     width="600"
@@ -61,14 +65,15 @@ In Short...
     onclick="window.open('/drs/guides/golemsmap.png','_blank')"
     style="cursor:pointer; display: block !important; margin-left: auto; margin-right: auto;"
 />
+<p style="text-align:center; margin-top: 0;">(Click to expand in new window)</p>
 <br/><hr/>
 
-### Golem Mechanics
+### Enemies
 #### Uncolored Ruin Golem
-These golems will tether to the first person that attacks them. Holding their hate/aggro on that tethered player until they die or the person tethered dies. These will need to be kept away from the Green Golem since Green can absorb the uncolored golems for a strong damage up.
+These golems will tether to the first person that attacks them. Holding their hate/aggro on that tethered player until they die or the person tethered dies. These will need to be kept away from the Green Golem since it will absorb the uncolored golems for a near lethal damage up.
 
-Once all Bicolor Golems are dead they will start to spawn at a much more frequent rate. As well as spam casting **Demolish** which is a massive AoE that applies a Thrice Come Ruin if allowed to finish. During this time the uncolored Ruin Golems should be stunned using a Caster's **Sleep**, 
-Healer's **Repose**, Tank's **Low Blow**, or a Melee's **Leg Sweep**.
+Once all Bicolor Golems are dead these golems will start to spawn at a much more frequent rate. As well as spamming **Demolish** which is a massive AoE that applies a Thrice Come Ruin if allowed to finish. During this time the uncolored Ruin Golems should be crowd controlled using a Caster's **Sleep**, 
+Healer's **Repose**, WHM's **Holy**, Tank's **Low Blow**, or a Melee's **Leg Sweep**.
 
 #### All Bicolor Golems
 All bicolor golems will gain a damage up for every other bicolor golem that has been killed. So the kill order does sort of matter but at the same times doesn't. Often times groups will leave Red Golems for last since that tank will not take damage unless under the effects of tank invulnerability.
@@ -80,7 +85,7 @@ of the golem in the room. If they do not match, let the **Metamorphosis** cast c
 before the golem is killed. 
 
 #### Blue Golem
-Blue Golems require the most attention from healers as they cast the **Torrential Ruin** tankbuster. This is medium sized AoE around the main tank that inflicts a incredibly lethal bleed (~50k per tick) to anyone hit by it. This bleed _must_ be cleansed with either **Esuna**, **Resistance Medikit**,
+Blue Golems have the **Torrential Ruin** buff require the most attention from healers as they cast the **Core Combustion** tankbuster. This is medium sized AoE around the main tank that inflicts a incredibly lethal bleed (~50k per tick) to anyone hit by it. This bleed _must_ be cleansed with either **Esuna**, **Resistance Medikit**,
 or BRD's **The Warden's Paen**. If left uncleansed that tank will die almost immediately to DoT.
 
 #### White Golem
@@ -88,7 +93,9 @@ White Golems have the **Subtle Ruin** buff and are the simpliest to handle. Howe
 annoying buffs like damage ups and vulnverability downs. 
 
 #### Green Golem
-Green Golems have a buff called **Avaricious Ruin** which grants it the ability to consume/absord the uncolored Ruin Golems that spawn at the North and South ends of the center hallway. If any golems are absord, the Green golem will gain a potent damage up and being autoing the tank for nearly half their HP.
+Green Golems have a buff called **Avaricious Ruin** which grants it the ability to consume/absord the uncolored Ruin Golems that spawn in the hallway. If any golems are absord, the Green golem will gain a potent damage up and being autoing the tank for near lethal damage. You can recover from an abosrbed golem. 
+However, both heavy mitigation and healing is required to keep the tank alive. 
+
 One or two players must hold the uncolored golems while Green is still alive.
 
 #### Red Golem
@@ -98,7 +105,7 @@ The auto attacks also become tankbusters so it's important that a tank picks thi
 **Once the party is ready to kill red, the red tank should press their invulnerability and move the golem ontop of the glowing pad.**
 <br/><hr/>
 
-### Lowamn Guide
+### Lowman Guide
 If you are less than 24 players, try to get at least 4 tanks. It will make everyone's lives just a bit easier. However if you cannot find a true tank, have a DPS run **Lost Incense**, **Lost Rampage/Burst**, and bring some **Resistance Potion Kits** for healing. 
 The DPS should prioritize taking **Green Golem** followed by **Red**, **Blue**, and finally **White**. 
 
