--- a/src/content/docs/drs/guides/guards.mdx
+++ b/src/content/docs/drs/guides/guards.mdx
@@ -15,20 +15,34 @@ import Footer from "@components/Footer.astro";
 />
 <script type="module" src="https://cdn.jsdelivr.net/npm/@shoelace-style/shoelace@2.15.1/cdn/shoelace-autoloader.js"></script>
 
+## Pocket Guide
 <Image
-    src="/drs/guides/qg.png"
+    src="/drs/guides/guards/qg.png"
     width="700"
     height="500"
     decoding="async"
     loading="eager"
     alt="Guards Cheatsheet"
-    onclick="window.open('/drs/guides/qg.png','_blank')"
+    onclick="window.open('/drs/guides/guards/qg.png','_blank')"
     style="cursor:pointer; display: block !important; margin-left: auto; margin-right: auto;"
 />
 <p style="text-align:center; margin-top: 0;">(Click to expand in new window)</p>
+:::danger[Please Read Everything!]
+Please read the entire page to fully understand the mechanics and strategies for this encounter.
+:::
 
-#### How to click off Spellforge / Steelsting
-(macros for each client language!)
+## Guide
+### Opening Circus
+### Steelsting/Spellforge
+### Relentless Battery 1 (Bomb Tethers)
+### Relentless Battery 2 (Wind/Lightning)
+### Relentless Battery 3 (Frogs + Analysis)
+### Relentless Battery 4 (Sniper Turrets)
+### Relentless Battery 5 (Clones + Analysis)
+### Reflects and Aura Spheres
+
+## Spellforge/Steelsting Macros
+Quick macros to help anyone, namely console players, quickly remove Spellforge and Steelsting.
 
 **EN**
 ```
@@ -54,7 +68,7 @@ import Footer from "@components/Footer.astro";
 /statusoff "Morsure de l'acier oubliée"
 ```
 
-### Markers
+## Markers
 **Reflector/Dispel Setup Markers**
 ```
 {"Name":"QG Bridge Setup","MapID":761,"A":{"X":240.533,"Y":-88.0,"Z":-124.888,"ID":0,"Active":true},"B":{"X":243.88,"Y":-88.0,"Z":-121.4,"ID":1,"Active":true},"C":{"X":247.389,"Y":-88.0,"Z":-125.497,"ID":2,"Active":true},"D":{"X":248.561,"Y":-88.0,"Z":-121.073,"ID":3,"Active":true},"One":{"X":240.96,"Y":-88.0,"Z":-114.976,"ID":4,"Active":true},"Two":{"X":243.983,"Y":-88.0,"Z":-118.347,"ID":5,"Active":true},"Three":{"X":246.179,"Y":-88.0,"Z":-115.285,"ID":6,"Active":true},"Four":{"X":0.0,"Y":0.0,"Z":0.0,"ID":7,"Active":false}}
