--- a/src/content/docs/drs/guides/queen.mdx
+++ b/src/content/docs/drs/guides/queen.mdx
@@ -15,19 +15,34 @@ import Footer from "@components/Footer.astro";
 />
 <script type="module" src="https://cdn.jsdelivr.net/npm/@shoelace-style/shoelace@2.15.1/cdn/shoelace-autoloader.js"></script>
 
+## Pocket Guide
 <Image
-    src="/drs/guides/queen.webp"
+    src="/drs/guides/queen/queen.webp"
     width="700"
     height="500"
     decoding="async"
     loading="eager"
     alt="Queen Cheatsheet"
-    onclick="window.open('/drs/guides/queen.webp','_blank')"
+    onclick="window.open('/drs/guides/queen/queen.webp','_blank')"
     style="cursor:pointer; display: block !important; margin-left: auto; margin-right: auto;"
 />
 <p style="text-align:center; margin-top: 0;">(Click to expand in new window)</p>
+:::danger[Please Read Everything!]
+Please read the entire page to fully understand the mechanics and strategies for this encounter.
+:::
 
-### Markers
+## Guide
+### Murder Chess
+### Super Chess
+### Relentless Play 1
+### Relentless Play 2
+### Relentless Play 3
+### Relentless Play 4
+### Soft Enrage
+
+
+
+## Markers
 **Diamond Queen**
 ```
 {"Name":"Old Queen","MapID":761,"A":{"X":-272.026,"Y":-175.0,"Z":-435.125,"ID":0,"Active":true},"B":{"X":-251.977,"Y":-175.0,"Z":-415.035,"ID":1,"Active":true},"C":{"X":-272.013,"Y":-175.0,"Z":-395.045,"ID":2,"Active":true},"D":{"X":-292.057,"Y":-175.0,"Z":-415.039,"ID":3,"Active":true},"One":{"X":-281.962,"Y":-175.0,"Z":-424.954,"ID":4,"Active":true},"Two":{"X":-262.016,"Y":-175.0,"Z":-425.036,"ID":5,"Active":true},"Three":{"X":-262.013,"Y":-175.0,"Z":-405.057,"ID":6,"Active":true},"Four":{"X":-282.033,"Y":-175.0,"Z":-404.97,"ID":7,"Active":true}}
