--- a/src/content/docs/drs/guides/slimes.mdx
+++ b/src/content/docs/drs/guides/slimes.mdx
@@ -46,30 +46,28 @@ If you prefer a video please watch the <a href="https://www.youtube.com/watch?v=
     style="cursor:pointer; display: block !important; margin-left: auto; margin-right: auto;"
 />
 <p style="text-align:center; margin-top: 0;">(Click to expand in new window)</p>
-:::danger[Consider the Following...]
-Please read the entire page to fully understand and grasp the mechanics you will see during this fight.
+:::danger[Please Read Everything!]
+Please read the entire page to fully understand the mechanics and strategies for this encounter.
 :::
-
-
 <br/><hr/>
 
 ### Guide
-The goal of slimes side is to activate or "light up" the four green pads in each of the four rooms. To "light up" a pad a large, or "fused", Viscous Clot must die ontop of the pad as it attempts to cast "Rupture". If done properly,
-a glowing ring will appear around the pad for ~10 seconds before shutting off. So slimes must be killed in a roughly the same timeframe else you will likely wipe. There are **three traps that will be hidden and must be precepted**, avoid entering rooms until they've been cleared with **Lost Perception** 
+The goal of slimes side is to activate or "light up" the four green pads in each of the four rooms. To "light up" a pad a large, or "fused", Viscous Clot must die on top of the pad as it attempts to cast "Rupture". If done properly,
+a glowing ring will appear around the pad for ~10 seconds before shutting off. So slimes must be killed in roughly the same timeframe else you will likely wipe. There are **three traps that will be hidden and must be precepted**, avoid entering rooms until they've been cleared with **Lost Perception** 
 and avoid the orange landmines and purple poison traps on the ground.
 
-<JobIcon icon="TankRole"/>**Tanks** grab green Clots from the hallway and bring them to their rooms when called. Most hosts follow a 3-2-1 pattern, with tanks grabbing 3 slimes and then 2. Making sure to keep the large green slime on the pad as best you can.
+<JobIcon icon="TankRole"/>**4 Tanks** will grab green Clots from the hallway and bring them to their assigned rooms when called. Most hosts follow a 3-2-1 pattern, with tanks grabbing 3 slimes and then 2. Making sure to keep the large green slime on the pad as best you can.
 
 <JobIcon icon="HealerRole"/>**Healers** keep tanks alive and bring the last Viscous Clot to their room for their tank.
 
-<JobIcon icon="DPSRole"/>**DPS** kill red Sanguine Clots in their assigned rooms. Or killing the Bozjan Soldiers that spawn at the North and South ends of the center hallway.
+<JobIcon icon="DPSRole"/>**DPS** help kill red Sanguine Clots in their assigned rooms. Or killing the Bozjan Soldiers that spawn at the North and South ends of the center hallway.
 
-Once all four rooms have a large green slime casting Rupture on their pads, everyone will be directed to run towards the North Eastern corner of the map. This is the safest spot to be as you will not be hit by any of the Rupture casts.
-Before you leave, please make sure to pick up any and all aggro on the remaining slimes and bozjan soliders. Forgetting either could cause a rogue fusion or a solider knocking a slime off a pad.
+Once all four rooms have a large green slime casting Rupture on their pads, everyone will be directed to run toward the northeast corner of the map. This is the safest spot to be as you will not be hit by any of the Rupture casts.
+Before you leave, please make sure to pick up any aggro on the remaining slimes and Bozjan soldiers. Forgetting either could cause a rogue fusion or a soldier knocking a slime off the pad.
 
-You will know you've successfully cleared slimes when the remaining green and red slimes begin to despawn, leaving just the soliders left.
+You will know you've successfully cleared slimes when the remaining green and red slimes begin to despawn, leaving just the soldiers.
 
-#### Role Positions Reference
+#### Slimes Map
 <Image
     src="/drs/maps/slime-stand-here.png"
     width="550"
