--- a/src/content/docs/drs/guides/lord.mdx
+++ b/src/content/docs/drs/guides/lord.mdx
@@ -15,6 +15,11 @@ import Footer from "@components/Footer.astro";
 />
 <script type="module" src="https://cdn.jsdelivr.net/npm/@shoelace-style/shoelace@2.15.1/cdn/shoelace-autoloader.js"></script>
 
+## Guide
+### Pre-Adds
+### Monks
+### Post-Adds
+
 ### Markers
 **Reflector/Tank Setup Markers**
 ```
