--- a/src/content/docs/drs/guides/phantom.mdx
+++ b/src/content/docs/drs/guides/phantom.mdx
@@ -15,7 +15,24 @@ import Footer from "@components/Footer.astro";
 />
 <script type="module" src="https://cdn.jsdelivr.net/npm/@shoelace-style/shoelace@2.15.1/cdn/shoelace-autoloader.js"></script>
 
-### Markers
+## Guide
+### Miasma 1
+Find the circle on the bottom. Follow it up using the dots on the ground. After 3 hits of the rectangle move over ot 2/3.
+
+### Miasma 2
+Start on 1/3 and move into 2/4 after 3 hits. Then move back to 1/3 after another 3 hits.
+
+### Add Phase
+Kill Red/Bloody Wraiths. 
+Heal White/Misty Wraiths.
+
+### Miasma 3
+lmfao idk.
+
+### Miasma 4
+If you see this either your shotcaller killed everyone or you have bad dps. I don't make the runs.
+
+## Markers
 **Fight Markers**
 ```
 {"Name":"Phantom","MapID":761,"A":{"X":183.947,"Y":-96.999,"Z":-389.727,"ID":0,"Active":true},"B":{"X":195.884,"Y":-96.999,"Z":-390.592,"ID":1,"Active":true},"C":{"X":208.037,"Y":-96.999,"Z":-390.119,"ID":2,"Active":true},"D":{"X":219.958,"Y":-96.999,"Z":-391.045,"ID":3,"Active":true},"One":{"X":184.007,"Y":-96.999,"Z":-351.083,"ID":4,"Active":true},"Two":{"X":195.88,"Y":-96.999,"Z":-351.114,"ID":5,"Active":true},"Three":{"X":208.095,"Y":-96.999,"Z":-351.242,"ID":6,"Active":true},"Four":{"X":220.076,"Y":-96.999,"Z":-351.263,"ID":7,"Active":true}}
