--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -18,8 +18,8 @@ import Footer from "@components/Footer.astro";
     <body>
     <div class="index-content">
         <sl-card style="display:flex;justify-content:center" class="card-basic">
-            <p>This website was created to be an easy to access library of all the current Foray related information in the NA FFXIV Community. Currently only Delubrum Savage is 
-            supported and being maintained. Once the Dawntrail field operation comes out, it will be slowly updated with content and strats as they appear.</p>
+            <p>This website was created to be an easy-to-access library of all the current Foray-related content in the NA FFXIV Community. Currently, 
+            only Delubrum Savage is supported and being maintained. Once the Dawntrail field operation comes out, it will be slowly updated with content and strats as they appear.</p>
         </sl-card>
         <h2 style="display:flex;justify-content:center">Field Operations</h2>
         <div style="display:flex;justify-content:center" class="multi-button">
