npm i and updated/added occult crescent sections

--- a/src/content/docs/crescent/ftb/overview.mdx
+++ b/src/content/docs/crescent/ftb/overview.mdx
@@ -1,5 +1,5 @@
 ---
-title: IT'S HAPPENINGGGGGG
+title: "Forked Tower: Blood Overview"
 description: Reccomended Discords for engaging with Field Operations content
 ---
 
@@ -18,8 +18,6 @@ import Footer from '@components/Footer.astro'
 <script type="module" src="https://cdn.jsdelivr.net/npm/@shoelace-style/shoelace@2.15.1/cdn/shoelace-autoloader.js"></script>
 <html>
     <body>
-        ITS CONFIRMEEEEDDDDDDDDDDDDDDDDDDDD
-        <Image alt="Shade's Triangle" loading="eager" width="785" height="450" src="/triangle.png"/>
-        <Footer />
+        ftb overview
     </body>
 </html>
