--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -25,7 +25,7 @@ import Footer from "@components/Footer.astro";
         <div style="display:flex;justify-content:center" class="multi-button">
             <div>
                 <button onclick="location.href='/drs/overview'">Delubrum (Savage)</button>
-                <button onclick="location.href='/triangle/overview'">Shade's Triangle</button>
+                <button onclick="location.href='/crescent/overview'">Occult Crescent</button>
                 <button onclick="location.href='https://www.youtube.com/watch?v=t6XbIAXhXS4'">Baldesion Arsenal</button>
             </div>
         </div>
