Updated styling to Next.js theme and updated font to Comfortaa

--- a/src/content/docs/crescent/ftb/fights.mdx
+++ b/src/content/docs/crescent/ftb/fights.mdx
@@ -215,7 +215,7 @@ These strats are all used by the featured N.A. Discords linked [here](/others/di
     style="cursor:pointer; display: block !important; margin-left: auto; margin-right: auto;"
 />
 
-:::tip[Alternative Sage's Staff]
+:::note[Alternative Sage's Staff]
 Some hosts may choose to do an alternative version of Sage's Staff where the party either all stacks directly under the boss or at a select marker. Both of those and normal staffs
 are considered valid solutions. Hosts can and should annouce to the party which one they will be doing. 
 
