changed structure of files, condensed a lot

--- a/src/content/docs/crescent/ftb.mdx
+++ b/src/content/docs/crescent/ftb.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Forked Tower: Blood Encounters"
+title: "Forked Tower: Blood"
 description: Reccomended Discords for engaging with Field Operations content
 ---
 
@@ -16,15 +16,25 @@ import Footer from '@components/Footer.astro'
   onload="document.documentElement.classList.add('sl-theme-dark');"
 />
 <script type="module" src="https://cdn.jsdelivr.net/npm/@shoelace-style/shoelace@2.15.1/cdn/shoelace-autoloader.js"></script>
-All guides linked below will feature the same strats, just with a different presentation and/or slightly different explainations. Both will result in extremely similar outcomes.
-These strats are all used by the featured N.A. Discords linked [here](/others/discords)
-## General Resources
-- [**Timelines**](https://docs.google.com/spreadsheets/d/1Nb4pnAjHg06r7zR3bJEUaZ7gwcX4nue0YIuybVdvpVk/edit?gid=0#gid=0)
-- [**Tank Mitigation Timeline**](https://docs.google.com/spreadsheets/d/1UlbGYBrhVn4L1isfcVACOqLlYclHeP9Zazj6PfM3Y8U/edit?gid=2049451119#gid=2049451119)
+## Basics, Entry, etc.
+Forked Tower: Blood is the capstone raid released in 7.25 alongside Occult Crescent: South Horn. It features many difficult encounters designed for a minimum of 24 players to participate in.
+It features limited raising in both methods and a lives sytems along with more gimmicky mechanics that require the usage of specific Phantom Jobs such as Geomancer, Time Mage, and Thief.
+
 <br></br>
 <hr></hr>
 
-## Demon Tablet
+## Encounters/Bosses
+All guides linked below will feature the same strats, just with a different presentation and/or slightly different explainations. Both will result in extremely similar outcomes.
+These strats are all used by the featured N.A. Discords linked [here](/others/discords)
+
+### General Encounter Resources
+- <a href="https://docs.google.com/spreadsheets/d/1Nb4pnAjHg06r7zR3bJEUaZ7gwcX4nue0YIuybVdvpVk" target="_blank">**Fight Timelines**</a>
+- <a href="https://docs.google.com/spreadsheets/d/1UlbGYBrhVn4L1isfcVACOqLlYclHeP9Zazj6PfM3Y8U" target="_blank">**Tank Mitigation**</a> (includes pKnight, Non-pKnight, Berserker)
+- <a href="https://docs.google.com/spreadsheets/d/1wHcHBrO41f7BNaJmRCqxGwdv9bldhb-4m2YfcVWWzbM" target="_blank">**Healer Mitigation**</a> (include pBard timings)
+<br></br>
+<hr></hr>
+
+### Demon Tablet
 - <a href="https://raidplan.io/plan/7Y88dbybDIm5wgTs" target="_blank">**Raidplan**</a>
 - <a href="https://docs.google.com/presentation/d/12fRuTLrDoIDrQBVBkg2s3Nrd1NpwOjMxFPlbfikGiz0/edit?slide=id.p#slide=id.p" target="_blank">**Google Slides**</a>
 - **Pocket Guides** (mini-video guides)
@@ -53,8 +63,12 @@ These strats are all used by the featured N.A. Discords linked [here](/others/di
 <br></br>
 <hr></hr>
 
-## Hallways
+### Hallways
 - <a href="https://docs.google.com/presentation/d/1FB06sUFYWn3gKa1x61r1i4faTEzK5OgBFHsDo8lYakA/present#slide=id.p" target="_blank">**Google Slides**</a>
+:::danger[*Be Careful of Traps, Thieves, and Rangers*]
+During this section of Forked Tower you should always be far behind your Thieves and Rangers as they scout ahead to precept/remove traps. 
+If you stand to close to any of these things, you risk dying. Do not waste your valuable lives.
+:::
 
 <Image
     src="/ft/hallways_traps.png"
@@ -79,11 +93,10 @@ These strats are all used by the featured N.A. Discords linked [here](/others/di
     style="cursor:pointer; display: block !important; margin-left: auto; margin-right: auto;"
 />
 <p style="text-align:center; margin-top: 0;">(Click to expand in new window)</p>
-
 <br></br>
 <hr></hr>
 
-## Dead Stars
+### Dead Stars
 - <a href="https://raidplan.io/plan/eb7h5wKdMLui__PV" target="_blank">**Raidplan**</a>
 - <a href="https://docs.google.com/presentation/d/1yh8cJQvk0V2T8IKR5ppYLPX7Q2pbAXEsB81iAc1C3nI/present?slide=id.p" target="_blank">**Google Slides**</a>
 - **Pocket Guides** (mini-video guides)
@@ -112,8 +125,13 @@ These strats are all used by the featured N.A. Discords linked [here](/others/di
 <br></br>
 <hr></hr>
 
-## Bridges
+### Bridges
 - <a href="https://docs.google.com/presentation/d/1JXFyTkLjPNYXwvOi02Uu9tZPN515onZU2LwNuPyMPR8/present" target="_blank">**Google Slides**</a>
+
+:::danger[*Be Careful of Traps, Thieves, and Rangers*]
+During this section of Forked Tower you should always be far behind your Thieves and Rangers as they scout ahead to precept/remove traps. 
+If you stand to close to any of these things, you risk dying. Do not waste your valuable lives.
+:::
 
 <Image
     src="/ft/bridges_map.png"
@@ -136,7 +154,7 @@ These strats are all used by the featured N.A. Discords linked [here](/others/di
 <br></br>
 <hr></hr>
 
-## Marble Dragon
+### Marble Dragon
 - <a href="https://raidplan.io/plan/t-nZwGnfgReh9Hib" target="_blank">**Raidplan**</a>
 - <a href="https://docs.google.com/presentation/d/1YeOhNZHb7fEyE25EAkP9UoQ8TBhInbrgguYtVdNIIAQ/present?slide=id.p" target="_blank">**Google Slides**</a>
 - **Pocket Guides** (mini-video guides)
@@ -164,8 +182,13 @@ These strats are all used by the featured N.A. Discords linked [here](/others/di
 <br></br>
 <hr></hr>
 
-## Lockwards
+### Lockwards
 - <a href="https://docs.google.com/presentation/d/1x6711dkqAdIJdtE0KuhQVj7Qfa-9GmZonX-DZBR7jdM/present" target="_blank">**Google Slides**</a>
+
+:::danger[*Be Careful of Traps, Thieves, and Rangers*]
+During this section of Forked Tower you should always be far behind your Thieves and Rangers as they scout ahead to precept/remove traps. 
+If you stand to close to any of these things, you risk dying. Do not waste your valuable lives.
+:::
 
 <Image
     src="/ft/lockwards_trap_map.png"
@@ -195,7 +218,7 @@ These strats are all used by the featured N.A. Discords linked [here](/others/di
 <br></br>
 <hr></hr>
 
-## Magitaur
+### Magitaur
 - <a href="https://raidplan.io/plan/aX0NBDNs6BuYJ2pg" target="_blank">**Raidplan**</a>
 - <a href="https://docs.google.com/presentation/d/15Mbb5oVXmfGVErUI1gCce3QZ-AjPNX6D7q1PJ5V4hB8/present?slide=id.p" target="_blank">**Google Slides**</a>
 - <a href="https://mathranger101.itch.io/magitaur-sim" target="_blank">**Magitaur Mechanic Simulator**</a> (browser based game)
@@ -226,7 +249,6 @@ As always, if you're confused... **ask questions!**
 <details>
 <summary>Fight PoVs</summary>
 - <a href="https://youtu.be/9L7PZe8DnYk" target="_blank">Monk / p.Sam</a>
-
 </details>
 
 <br></br>
