--- a/src/content/docs/crescent/southhorn.mdx
+++ b/src/content/docs/crescent/southhorn.mdx
@@ -1,6 +1,8 @@
 ---
-title: "Forked Tower: Blood Overview"
+title: "Occult Crescent: South Horn"
 description: Reccomended Discords for engaging with Field Operations content
+tableOfContents:
+  minHeadingLevel: 2
 ---
 
 import { Aside } from '@astrojs/starlight/components';
@@ -16,8 +18,10 @@ import Footer from '@components/Footer.astro'
   onload="document.documentElement.classList.add('sl-theme-dark');"
 />
 <script type="module" src="https://cdn.jsdelivr.net/npm/@shoelace-style/shoelace@2.15.1/cdn/shoelace-autoloader.js"></script>
-<html>
-    <body>
-        ftb overview
-    </body>
-</html>
+
+## Occult Crescent
+## Phantom Jobs
+## Vendors
+## Gold Farming
+## Critical Engagements
+## FATEs
