--- a/src/content/docs/crescent/ocrelics.mdx
+++ b/src/content/docs/crescent/ocrelics.mdx
@@ -34,9 +34,34 @@ It was revealed in LiveLetter LXXXVII that the drop rates for the demiatmas are 
 - **FATEs**: 5% chance
 - **CEs**: 20% chance
 :::
-One you have obtains three of each type of demiatma, return to the Phantom Village and speak with Gerolt. From there the player can trade the uncapped level 100 tomestones
-for Arcanite; three of which are required to exchanged for you shiny new Penumbrae weapon.
+One you have obtains three of each type of the six demiatma, return to the Phantom Village and speak with Gerolt. From there the player can trade the uncapped level 100 tomestones
+for *Arcanite;* three (1500 tomes) of which are required to exchanged for you shiny new Penumbrae weapon. In total this step costs 31,500 tomes.
 
 ## 7.31: Umbrae Weapons
+To start this quest return to the Phantom Village and talk to Gerolt. They will task you with obtaining a handful of items from various places in Dawntrail zones. Specifically:
+1. Rroneek Glue Block from a vendor in Tuliyollal at (13.1, 12.7). It costs 300,000 gil.
+2. Ut'ohmu Siderite from the Bicolor Gem vendor in Yak T'el or either one in Tuliyollal/Solution 9 for 600 Bicolor Gems (38 FATEs w/ no bonus)
+3. One Synthetic Dark Matter Alpha, Beta, AND Gamma each. These need to be crafted by you or a friend.
+
+:::caution[Marketboarding Items]
+All the above items can be bought off the Marketboards as well. However, prices can vary wildly and you should not buy the Rroneek Glue off the markets unless at a steep discount.
+:::
+
+Once all items are gathered, return to the Phantom Village to begin the Aether, Aether Everywhere quest. This will begin the next lengthy one-time grind.
+
+### One-Time Grind: The Aetherwells
+This step requires you to fill up Aetherwells to 10,000 points per each. There are four wells in total: Green, Blue, Red, and Yellow. Each well is filled by completing a specific Duty Roulette type in the Duty Finder menu. 
+- Green: High-level Dungeons
+- Blue: Alliance Raids
+- Red: Trials
+- Yellow: Normal Raids
+
+Upon completion, each duty will give you an amount of points based on which duty was completed for that Aetherwell. The value of each duty is located 
+<a href="https://docs.google.com/spreadsheets/d/1hkToJbehui0hwPJRin08xuveLCnG7SmYaiCQIZcQDvg/edit?usp=sharing" target="_blank">on the crowd sourced spreadsheet</a>. There is a daily bonus for 
+these points and you should take advantage of these when possible. **No progress can be made on this step through Occult Crescent.**
+
+When the Aetherwells step is completed, return to the Phantom Village and speak to Gerolt. From there the player can trade the uncapped level 100 tomestones
+for *Waxing Arcanite;* three of which (1500 tomes), along with your Penumbrae weapon of choice, are required to exchanged for you shiny new Umbrae weapon. In total this step costs 31,500 tomes.
+
 ## 7.4x: ???
 ## 7.5x: ???
