More updated to relics and occult overview

--- a/src/content/docs/crescent/occult.mdx
+++ b/src/content/docs/crescent/occult.mdx
@@ -49,13 +49,82 @@ improving the higher your chain goes. Currently, to chain mobs you must kill mob
 7 or 8 levels higher when you reach an 8-member party. Currently, chaining only rewards Enlightenment Gold Pieces, Knowledge Level XP, and Phantom Job XP.
 
 <div style="display:flex; justify-content: center;">
-| Party Size | Enemy Level |
-| :----------: | :-----------: |
-| Solo       | 2 levels above |
-| 2       | 3 levels above |
-| 3-4       | 4-5 levels above |
-| 5-6       | 6-7 levels above |
-| 7-8       | 7-8 levels above |
+| Party Size    | Enemy Level |
+| :----------:  | :-----------: |
+| Solo          | 2 levels above |
+| 2             | 3 levels above |
+| 3-4           | 4-5 levels above |
+| 5-6           | 6-7 levels above |
+| 7-8           | 7-8 levels above |
+</div>
+
+### Currencies in Occult Crescent
+#### Enlightenment Silver Pieces
+Enlightenment Silver Pieces are *only* earned by doing FATEs, CEs, and opening pot/bunny coffers in the South Horn. 
+<div style="display:flex; justify-content: center;">
+| Activity | Amount Earned |
+| :---: | :---: |
+| **FATEs** | 30 |
+| **Crit. Engagements** | 200 |
+| **Pot Chests** | 100/300/1,000|
+| **Bunny Chests** | 1,000 |
+</div>
+
+Silver pieces are primarily used for both purchasing and augmented Arcanaut's gear.
+You can see a full list of items available to purchase by visiting the Expedition Antiquarian in base camp. Noteable items include:
+<div style="display:flex; justify-content: center;">
+| Item | Use | Cost |
+| :---: | :---: | :--: |
+| **South Horn Riding Map** | Increases mount speed, makes travelling and getting to FATEs much easier. | 3,000 |
+| **Ph. Time Mage** | Slows/dispels mobs, hastens yourself or allies. Required for Forked Tower. | 1,000 |
+| **Ph. Cannoneer** | Strong AoE damage. Has stronger/longer trick attack. Perfect for gold farming! | 1,000 |
+| **Ph. Chemist** | Healing, MP refills, and the only way to raise people in Forked Tower. | 1,000 |
+| **Aetherspun Silver** | Used in augmented Arcanaut's gear from base to the +1 variant. | 1,200 |
+| **Sanguine Ciphers** | Costs 600 but you get 800 on each FT clear. Can pay itself back in reclears. | 600 |
+| **Ancient Airship** | 4-seater mount. Definitely save this for last! | 5,000 | 
+</div>
+
+#### Enlightenment Gold Pieces
+Enlightenment Gold Pieces are *only* earned by chaining mobs or opening pot/bunny coffers in the South Horn.
+<div style="display:flex; justify-content: center;">
+| Activity | Amount Earned |
+| :---: | :---: |
+| **Mobs** | Varied |
+| **Crit. Engagements** | 200 |
+| **Pot Chests** | 160/480/1,600 |
+| **Bunny Chests** | 1,600|
+</div>
+:::note[Gold Increase from Chaining]
+When above a chain of 20, any gold earned will be doubled! So keep that chain going for as long as possible!
+:::
+
+Gold pieces are primarily used for purcahse **Aetherial Fixatives** for augmenting Arcanaut's gear.
+You can see a full list of items available to purchase by visiting the Expedition Antiquarian in base camp. Noteable items include:
+<div style="display:flex; justify-content: center;">
+| Item | Use | Cost |
+| :---: | :---: | :--: |
+| **Aetherial Fixatives** | Used in augmented Arcanaut's gear from base to the +1 variant. | 3,000 |
+| **Ph. Samurai** | Strongest DPS option in Occult Crescent right now. | 1,000 |
+| **Ph. Geomancer** | Damage Buff/Healing Bells. Can Suspend self/party. Required for Forked Tower | 1,000 |
+| **Ph. Thief** | Healing, MP refills, and the only way to raise people in Forked Tower. | 1,000 |
+| **Sanguine Ciphers** | Used to enter Forked Tower. Costs 960 gold but accumulates fast when farming in a dedicated group. | 960 |
+| **Coffers/Potions** | Items used by Ph. Samurais/Chemists. Alternative to spending gil if no other uses for gold. | 50 |
+</div>
+
+#### Sanguinite
+Forked Tower: Blood exclusive currency. Earned from completing encounters and finding hidden chests throughout the tower. A max of 30 sanguinite can be potentially earned
+per clear. Sanguinite is mostly used to purchase X-Fixatives which are used in augmenting Arcanaut's gear from +1 to +2.
+
+You can see a full list of items available to purchase by visiting the Expedition Antiquarian in base camp. Noteable items include:
+<div style="display:flex; justify-content: center;">
+| Item | Use | Cost |
+| :---: | :---: | :--: |
+| **X-Fixatives** | Used in augmented Arcanaut's gear from +1 to the +2 variant. | 10 |
+| **Psamathe** | Pink-ish Dead Stars minion | 6 |
+| **Naiad** | Purple Dead Stars minion | 6 |
+| **Deimos** | Green Dead Stars minion | 6 |
+| **Crescent Furniture** | Housing items unique to Occult Crescent | Varied |
+| `/twirl` emote | Unique emote only found in South Horn | 30 |
 </div>
 
 ### Treasure Coffers
@@ -68,7 +137,7 @@ These are spawned in by doing things such as completing FATEs, CEs, clearing For
 | :------------: | :-----------: | :----------:
 | FATEs     | 75%       | 7.5% |
 | CEs       | 100%      | 7.5% |
-| Chaining  | 10%       | 1% |
+| Chaining  | 10%       | 1%   |
 | FT: Blood | 2 always  | 1 spawns, 10% for another |
 </div>
 
@@ -109,4 +178,4 @@ their respective coffer.
 
 
 ### Gearing and Best in Slot
-text
+Gearing in Occult Crescent is currently done by obtaining pieces of Arcanaut's Gear in South Horn. Each piece costs 4,000 enlightenment silver pieces and 
