--- a/src/content/docs/crescent/ocrelics.mdx
+++ b/src/content/docs/crescent/ocrelics.mdx
@@ -34,8 +34,8 @@ It was revealed in LiveLetter LXXXVII that the drop rates for the demiatmas are 
 - **FATEs**: 5% chance
 - **CEs**: 20% chance
 :::
-One you have obtains three of each type of the six demiatma, return to the Phantom Village and speak with Gerolt. From there the player can trade the uncapped level 100 tomestones
-for *Arcanite;* three (1500 tomes) of which are required to exchanged for you shiny new Penumbrae weapon. In total this step costs 31,500 tomes.
+One you have obtains three of each type of the six demiatma, return to the Phantom Village and speak with Gerolt. From there the player can trade 500 uncapped level 100 tomestones
+for one *Arcanite;* three (1500 tomes total) of which are required to exchanged for you shiny new Penumbrae weapon. In total this step costs 31,500 tomes.
 
 ## 7.31: Umbrae Weapons
 To start this quest return to the Phantom Village and talk to Gerolt. They will task you with obtaining a handful of items from various places in Dawntrail zones. Specifically:
@@ -47,21 +47,34 @@ To start this quest return to the Phantom Village and talk to Gerolt. They will 
 All the above items can be bought off the Marketboards as well. However, prices can vary wildly and you should not buy the Rroneek Glue off the markets unless at a steep discount.
 :::
 
-Once all items are gathered, return to the Phantom Village to begin the Aether, Aether Everywhere quest. This will begin the next lengthy one-time grind.
+Once all items are gathered, return to the Phantom Village to start the Aether, Aether Everywhere quest. This will begin the next lengthy one-time grind.
 
 ### One-Time Grind: The Aetherwells
-This step requires you to fill up Aetherwells to 10,000 points per each. There are four wells in total: Green, Blue, Red, and Yellow. Each well is filled by completing a specific Duty Roulette type in the Duty Finder menu. 
+This step requires you to fill up Aetherwells to 10,000 points per each. There are four wells in total: Green, Blue, Red, and Yellow. Each well is filled by completing a specific Duty Roulette type in Duty Finder. 
 - Green: High-level Dungeons
 - Blue: Alliance Raids
 - Red: Trials
 - Yellow: Normal Raids
 
-Upon completion, each duty will give you an amount of points based on which duty was completed for that Aetherwell. The value of each duty is located 
-<a href="https://docs.google.com/spreadsheets/d/1hkToJbehui0hwPJRin08xuveLCnG7SmYaiCQIZcQDvg/edit?usp=sharing" target="_blank">on the crowd sourced spreadsheet</a>. There is a daily bonus for 
-these points and you should take advantage of these when possible. **No progress can be made on this step through Occult Crescent.**
+When finishing a duty in the roulette, each duty will give you an amount of points based on which duty was completed for that Aetherwell. The point value of each duty was documented and can be found
+on the crowd sourced <a href="https://docs.google.com/spreadsheets/d/1hkToJbehui0hwPJRin08xuveLCnG7SmYaiCQIZcQDvg/edit?usp=sharing" target="_blank">spreadsheet linked here</a>. 
 
-When the Aetherwells step is completed, return to the Phantom Village and speak to Gerolt. From there the player can trade the uncapped level 100 tomestones
-for *Waxing Arcanite;* three of which (1500 tomes), along with your Penumbrae weapon of choice, are required to exchanged for you shiny new Umbrae weapon. In total this step costs 31,500 tomes.
+:::tip[Daily Bonuses!]
+There is a daily bonus for completing at least one roulette a day. Eligability for the bonus does reset along with the daily reset.
+
+Each bonus is worth:
+- Trials/Normal Raid: 614 points
+- High Level Dungeons: 376 points
+- Alliance Raid: 101 points
+:::
+
+:::danger[Progress Only Through Roulettes...]
+Depsite this being the relic quest for Phantom Weapons: **No progress can be made on this step through Occult Crescent.**
+:::
+
+
+When the Aetherwells step is completed, return to the Phantom Village and speak to Gerolt. From there the player can trade 500 uncapped level 100 tomestones
+for one *Waxing Arcanite;* three of which (1500 tomes total), along with your Penumbrae weapon of choice, are required to exchanged for you shiny new Umbrae weapon. In total this step costs 31,500 tomes.
 
 ## 7.4x: ???
 ## 7.5x: ???
